# cmake

./: README.md
cmake_test/findCURL/: CMakeLists.txt
cmake_test/findCURL/src/: CMakeLists.txt  main.cpp
cmake_test/install_test/: CMakeLists.txt  install.cpp
cmake_test/install_test/src/: CMakeLists.txt  main.cpp
cmake_test/test_static/: CMakeLists.txt
cmake_test/test_static/lib/: CMakeLists.txt  hello.cpp  hello.h
code/demo-code/: README.md
code/demo-code/demo1/: CMakeLists.txt  a.out  main.cpp
code/demo-code/demo10/: CMakeLists.txt  main.cpp
code/demo-code/demo10/cmake/modules/: Findlibdb_Demo.cmake
code/demo-code/demo2/: CMakeLists.txt  power.cpp
code/demo-code/demo3/: CMakeLists.txt  main.cpp
code/demo-code/demo4/: CMakeLists.txt
code/demo-code/demo4/src/: CMakeLists.txt
code/demo-code/demo5/: CMakeLists.txt  main.cpp
code/demo-code/demo6/: CMakeLists.txt  main.cpp
code/demo-code/demo6/src/: power.h
code/demo-code/demo7/: CMakeLists.txt  main.cpp
code/demo-code/demo8/: CMakeLists.txt  config.h.in  main.cpp
code/demo-code/demo9/: CMakeLists.txt  License.txt
code/demo-code/demo9/src/: CMakeLists.txt
